--- a/trabalho1/experiencia.html
+++ b/trabalho1/experiencia.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <header>
+    <h1>Currículo de Fulano de Tal</h1>
     <h1>Experiência Profissional — Detalhes</h1>
     <nav>
       <a href="index.html">Voltar à página principal</a>
@@ -28,16 +29,16 @@
         </thead>
         <tbody>
           <tr>
-            <td>Microsoft</td>
-            <td>Jr Android Developer</td>
+            <td>KRK</td>
+            <td>Lançamentos e colaborações</td>
             <td>2023 - o momento</td>
-            <td>Criação de páginas estáticas; uso de semântica HTML5; links e navegação.</td>
+            <td>Vocal / Performance</td>
           </tr>
           <tr>
-            <td>Google</td>
-            <td>Senior Android Developer</td>
+            <td>KRK2</td>
+            <td>Atividades solo</td>
             <td>2024 - o momento</td>
-            <td>Estruturação de conteúdo; tabelas acessíveis; organização de seções.</td>
+            <td>Artista</td>
           </tr>
         </tbody>
       </table>
