--- a/trabalho1/contato.html
+++ b/trabalho1/contato.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <header>
+    <h1>Currículo de Fulano de Tal</h1>
     <h1>Contato</h1>
     <nav>
       <a href="index.html">Voltar à página principal</a>
