--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html lang="pt-BR"><head>
   <meta charset="utf-8">
-  <meta http-equiv="refresh" content="0; url=/entrega1/">
+  <meta http-equiv="refresh" content="0; url=/trabalho1/">
   <title>Redirecionando…</title>
 </head><body>
-  <p>Redirecionando para <a href="/entrega1/">/entrega1/</a>…</p>
+  <p>Redirecionando para <a href="/trabalho1/">/trabalho1/</a>…</p>
 </body></html>
