AJuste Fulado para Fulano

--- a/trabalho1/index.html
+++ b/trabalho1/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header>
-    <h1>Currículo de <span>Fulado de Tal</span></h1>
+    <h1>Currículo de <span>Fulano de Tal</span></h1>
   </header>
 
   <main>
